--- a/vnsgu_animation.html
+++ b/vnsgu_animation.html
@@ -20,22 +20,26 @@
                         <i class="fa-solid fa-envelope" style="color: #fdc800; margin-right:5px;"></i>
                         info@vnsgu.ac.in
                     </li>
-
+                    <a href="https://www.vnsgu.ac.in/studentcorner.html">
                     <li class="border corner">
                         student corner
                     </li>
-
+                    </a>
+                    <a href="https://www.vnsgu.ac.in/employeecorner.html">
                     <li class="border corner">
                         employee corner
                     </li>
-
+                    </a>
+                    <a href="https://www.vnsgu.ac.in/collegecorner.html">
                     <li class="border corner">
                         college corner
                     </li>
-                    
+                    </a>
+                    <a href="https://vnsgu.ac.in/nep2020.html">
                     <li class="border corner">
                         nep 2020
                     </li>
+                    </a>
                 </ul>
 
                 <div>
@@ -66,33 +70,42 @@
                 <img src="vnsgu-logo-high.png" width="150px"/>
 
                 <ul style="list-style-type : none; display : flex;">
+                    <a href="#">
                     <li class="menu">
                         HOME
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         THE UNIVERSITY
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         DEPARTMENT
-                    </li>
+                    </li></a>
+                    <a href="https://www.vnsgu.ac.in/research_details.html">
                     <li class="menu">
                         RESEARCH
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         EXAMINATION
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         AFFILIATED COLLEGE
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         DOWNLOADS
-                    </li>
+                    </li></a>
+                    <a href="#">
                     <li class="menu">
                         PLACEMENT
-                    </li>
+                    </li></a>
+                    <a href="https://enews.vnsgu.ac.in/">
                     <li class="menu">
                         NEWS
-                    </li>                    
+                    </li></a>
                 </ul>
             </div>
     </header>
@@ -103,16 +116,16 @@
             <h3 class="veer">Veer Narmad South Gujarat University</h3>
             <p class="ex">Destination for the shining future</p>
             <p class="ex">VNSGU offers Research, PG, Integrated,UG, and Cerificate Programs</p>
-            <button class="but-img" style="margin-left:31%;">DEPARTMENTS</button>
-            <button class="but-img">RESEARCH</button>
-            <button class="but-img">360 VIEW</button>
+            <a href="https://www.vnsgu.ac.in/department_details.html"><button class="but-img" style="margin-left:31%;">DEPARTMENTS</button></a>
+            <a href="https://www.vnsgu.ac.in/research_details.html"><button class="but-img">RESEARCH</button></a>
+            <a href="https://360.vnsgu.ac.in/01-CAMPUS"><button class="but-img">360 VIEW</button></a>
 
             <div class="service">
                 <!--SERVICE 1-->
                     <div class="pannel1" style="margin-left: 60px;">
                         <div class="content1" style="display : flex; margin : 10px;">
                             <div style="margin-left : 20px;">
-                                <h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">Result And Hall Ticket</h3>
+                                <a href="https://hallticket.vnsgu.ac.in/"><h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">Result And Hall Ticket</h3></a>
                                 <p style="margin-right : 10px; font-size : 16px;line-height : 22px; color : white; font-weight: lighter;">Students may get their results and hall ticket from here</p>
                             </div>
                                 <i class="fa-solid fa-graduation-cap" style="color :#fdc800; font-size : 36px; margin-top : 15px; margin-right:12px;"></i>
@@ -124,7 +137,7 @@
                     <div class="pannel2">
                         <div class="content1" style="display : flex; margin : 10px;">
                             <div>
-                                <h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">IQAC</h3>
+                                <a href="https://vnsgu.ac.in/departments/iqac.html"><h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">IQAC</h3></a>
                                 <p style="margin-right : 12px; font-size : 16px;line-height : 22px; color : white; font-weight: lighter;">Internal Quality Assurance Cell</p>
                                 <p  style="margin-right : 12px; font-size : 16px;line-height : 22px; color : white; font-weight: lighter;">(IQAC)</p>
                             </div>
@@ -137,7 +150,7 @@
                     <div class="pannel3" style="margin-right: 60px;">
                         <div class="content1" style="display : flex; margin : 10px;">
                             <div style="margin-left : 20px;">
-                                <h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">University Library</h3>
+                                <a href="https://vnsgu.ac.in/library.html"><h3 style="margin-bottom : 10px; font-size : 22px; color : white; font-weight: lighter;">University Library</h3></a>
                                 <p style="margin-right : 10px; font-size : 16px;line-height : 22px; color : white; font-weight: lighter;">Reference Books, Journals, Periodicals, Thesis, Dissertations, e-Resources etc</p>
                             </div>
                                 <i class="fa-solid fa-book"  style="color :#fdc800; font-size : 36px; margin-top : 15px; margin-right:12px;"></i>
