--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!--MAIN INDEX IMAGE AREA-->
     <div class="main">
 
-            <img src="index.jpeg" id="img"/>
+            <img src="https://github.com/yashpandav/yash_pandav/blob/main/video.png" id="img"/>
             <h3 class="veer">Veer Narmad South Gujarat University</h3>
             <p class="ex">Destination for the shining future</p>
             <p class="ex">VNSGU offers Research, PG, Integrated,UG, and Cerificate Programs</p>
